--- a/安装记录.md
+++ b/安装记录.md
@@ -2,7 +2,9 @@
 
 这篇文章记录了我安装TripleO的过程
 
-部署undercloud 中断，报错提示查看 puppet module list有提示puppet module 依赖问题。
+部署undercloud 中断，报错提示查看 puppet module list。
+
+执行\`puppet module list\`有提示puppet module 依赖问题。
 
 ![](/assets/puppet-dependency.png)
 
