--- a/安装记录.md
+++ b/安装记录.md
@@ -4,7 +4,7 @@
 
 部署undercloud 中断，报错提示查看 puppet module list。
 
-执行\`puppet module list\`有提示puppet module 依赖问题。
+执行`puppet module list`有提示puppet module 依赖问题。
 
 ![](/assets/puppet-dependency.png)
 
