--- a/控制集群数量.md
+++ b/控制集群数量.md
@@ -1,20 +1,18 @@
 ## 添加、删除节点
 
-## 删除节点
-
-```
-node delete --stack $STACK_NAME --templates [templates dir] <list of nova instance IDs>
-```
-
-Scale Support for Each Node Type
+## Scale Support for Each Node Type
 
 | Node Type |Scale Up?  |Scale Down?|Notes|
 | :---      | :---      |           |     |
 |Controller |N|N||
 |Compute|Y|Y||
 |Ceph Storage Nodes|Y|N|在部署时至少有一个ceph节点时，才支持扩展|
-|Block Storage Nodes|
-|Object Storage Nodes|
+|Block Storage Nodes|N|N||
+|Object Storage Nodes|Y|Y||
 
 
 
+## 删除节点
+```
+node delete --stack $STACK_NAME --templates [templates dir] <list of nova instance IDs>
+```
