--- a/控制集群数量.md
+++ b/控制集群数量.md
@@ -2,17 +2,15 @@
 
 ## Scale Support for Each Node Type
 
-| Node Type |Scale Up?  |Scale Down?|Notes|
-| :---      | :---      |           |     |
-|Controller |N|N||
-|Compute|Y|Y||
-|Ceph Storage Nodes|Y|N|在部署时至少有一个ceph节点时，才支持扩展|
-|Block Storage Nodes|N|N||
-|Object Storage Nodes|Y|Y||
+| 节点类型 | 扩展? | 收缩? | 备注 |
+| :--- | :--- | --- | --- |
+| Controller | N | N |  |
+| Compute | Y | Y |  |
+| Ceph Storage Nodes | Y | N | 在部署时至少有一个ceph节点时，才支持扩展 |
+| Block Storage Nodes | N | N |  |
+| Object Storage Nodes | Y | Y |  |
+
+## 
 
 
 
-## 删除节点
-```
-node delete --stack $STACK_NAME --templates [templates dir] <list of nova instance IDs>
-```
