--- a/删除计算节点.md
+++ b/删除计算节点.md
@@ -1,6 +1,10 @@
 删除计算节点
 ---
 
+> 删除计算节点前，先把VM从当前计算节点前迁移出去
+
+
+
 ```
 node delete --stack $STACK_NAME --templates [templates dir] <list of nova instance IDs>
 ```
