--- a/删除计算节点.md
+++ b/删除计算节点.md
@@ -1,12 +1,16 @@
 删除计算节点
 ---
 
-> 删除计算节点前，先把VM从当前计算节点前迁移出去
-
-
-
+1. 删除计算节点前，先把VM从当前计算节点前迁移出去
+2. 在overcloud中，禁用nova service。
+3. 在 undercloud中，查询stack 名称
 ```
-node delete --stack $STACK_NAME --templates [templates dir] <list of nova instance IDs>
+$ heat stack-list
+```
+4. 在undercloud中，查询要删除的nova compute 节点的UUID
+```
+openstack overcloud node delete --stack [STACK_UUID] --templates \
+-e [ENVIRONMENT_FILE] [NODE1_UUID] [NODE2_UUID] [NODE3_UUID]
 ```
 
 删除节点时
