--- a/删除计算节点.md
+++ b/删除计算节点.md
@@ -13,4 +13,5 @@ openstack overcloud node delete --stack [STACK_UUID] --templates \
 -e [ENVIRONMENT_FILE] [NODE1_UUID] [NODE2_UUID] [NODE3_UUID]
 ```
 
-删除节点时
+> 在删除节点时需要使用和部署时一样的environment参数(e.g. -e 或者 --environment-file)。不需要其他的参数。
+
