--- a/删除计算节点.md
+++ b/删除计算节点.md
@@ -12,6 +12,18 @@ $ heat stack-list
 openstack overcloud node delete --stack [STACK_UUID] --templates \
 -e [ENVIRONMENT_FILE] [NODE1_UUID] [NODE2_UUID] [NODE3_UUID]
 ```
-
 > 在删除节点时需要使用和部署时一样的environment参数(e.g. -e 或者 --environment-file)。不需要其他的参数。
 
+5. 在删除nova-service
+```
+$ source ~/stack/overcloudrc
+$ nova service-delete [service-id]
+$ source ~/stack/stackrc
+```
+6. 删除nuetro agent
+```
+$ source ~/stack/overcloudrc
+$ neutron agent-list
+$ neutron agent-delete [openvswitch-service-id]
+$ source ~/stack/stackrc
+```
