--- a/Customization Ceph/定义根磁盘.md
+++ b/Customization Ceph/定义根磁盘.md
@@ -1,4 +1,6 @@
-## 定义根磁盘
+# 定义根磁盘
+
+---
 
 在执行完`openstack baremetal introspection bulk start`之后，根据得到的信息来定义ceph 节点的根磁盘。  
 根磁盘可以通过以下参数来指定,下文以serial来展示如何定义根磁盘。
