--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -1,5 +1,19 @@
-删除计算节点
+# 节点伸缩
+
 ---
+
+## 支持收缩或者扩展的节点类型
+
+| 节点类型 | 扩展? | 收缩? | 备注 |
+| :--- | :--- | --- | --- |
+| Controller | N | N | 一旦部署完成，控制节点不支持收缩或者扩展。 |
+| Compute | Y | Y | |
+| Ceph Storage Nodes | Y | N | 在部署时至少有一个ceph节点时，才支持扩展。 |
+| Block Storage Nodes | N | N | 一旦部署完成，Cinder节点不支持收缩或者扩展。 |
+| Object Storage Nodes | Y | Y | |
+
+
+## 删除计算节点
 
 1. 删除计算节点前，先把VM从当前计算节点前迁移出去
 2. 在overcloud中，禁用nova service。
