--- a/SCALING/添加、删除节点.md
+++ b/SCALING/添加、删除节点.md
@@ -1,16 +1,8 @@
-## 添加、删除节点
+# TripleO变更实践
 
-## 支持收缩或者扩展的节点类型
+---
 
-| 节点类型 | 扩展? | 收缩? | 备注 |
-| :--- | :--- | --- | --- |
-| Controller | N | N | 一旦部署完成，控制节点不支持收缩或者扩展。 |
-| Compute | Y | Y |  |
-| Ceph Storage Nodes | Y | N | 在部署时至少有一个ceph节点时，才支持扩展。 |
-| Block Storage Nodes | N | N | 一旦部署完成，Cinder节点不支持收缩或者扩展。 |
-| Object Storage Nodes | Y | Y |  |
 
-## 
 
 
 
