--- a/自定义Overcloud部署/定义主机.md
+++ b/自定义Overcloud部署/定义主机.md
@@ -85,7 +85,7 @@ parameter_defaults:
     ...
 ```
 
-同样的，在部署时，不要忘了附加`scheduler_hints_env.yaml`
+同样的，在部署时，不要忘了附加 `scheduler_hints_env.yaml`。
 
 
 ## 1.3 分配主机IP
