--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -1,3 +1,13 @@
 # 自定义网络
 
 ---
+
+## 1. 分配主机IP
+
+REF:[controlling-node-placement](https://access.redhat.com/documentation/en/red-hat-openstack-platform/10/paged/advanced-overcloud-customization/chapter-8-controlling-node-placement)
+
+# 2.隔离网络
+
+# 2. 部署代码自定义
+
+# 3.
