--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -3,11 +3,42 @@
 ---
 
 ## 1. 分配主机IP
+在使用isolation network部署overcloud时，所有的isolation netwrok IP 都会从`network-environment.yaml`定义的pool中获取。
 
-REF:[controlling-node-placement](https://access.redhat.com/documentation/en/red-hat-openstack-platform/10/paged/advanced-overcloud-customization/chapter-8-controlling-node-placement)
+**network-environment.yaml**
+```yaml
+resource_registry:
+  OS::TripleO::BlockStorage::Net::SoftwareConfig: ../nic-configs/cinder-storage.yaml
+  OS::TripleO::Compute::Net::SoftwareConfig: ../nic-configs/compute.yaml
+  OS::TripleO::Controller::Net::SoftwareConfig: ../nic-configs/controller.yaml
+  OS::TripleO::ObjectStorage::Net::SoftwareConfig: ../nic-configs/swift-storage.yaml
+  OS::TripleO::CephStorage::Net::SoftwareConfig: ../nic-configs/ceph-storage.yaml
 
-# 2.隔离网络
+parameter_defaults:
+  InternalApiNetCidr: 172.16.0.0/24
+  TenantNetCidr: 172.17.0.0/24
+  StorageNetCidr: 172.18.0.0/24
+  StorageMgmtNetCidr: 172.19.0.0/24
+  ManagementNetCidr: 172.20.0.0/24
+  ExternalNetCidr: 192.168.122.0/24
+  InternalApiAllocationPools: [{'start': '172.16.0.30', 'end': '172.16.0.40'}]
+  TenantAllocationPools: [{'start': '172.17.0.30', 'end': '172.17.0.40'}]
+  StorageAllocationPools: [{'start': '172.18.0.30', 'end': '172.18.0.40'}]
+  StorageMgmtAllocationPools: [{'start': '172.19.0.30', 'end': '172.19.0.40'}]
+  #ManagementAllocationPools: [{'start': '172.20.0.30', 'end': '172.20.0.40'}]
+  # Leave room for floating IPs in the External allocation pool
+  ExternalAllocationPools: [{'start': '192.168.122.30', 'end': '192.168.122.40'}]
+  # Set to the router gateway on the external network
+  ExternalInterfaceDefaultRoute: 192.168.122.1
+  # Gateway router for the provisioning network (or Undercloud IP)
+  ControlPlaneDefaultRoute: 192.0.2.1
+  # The IP address of the EC2 metadata server. Generally the IP of the Undercloud
+  EC2MetadataIp: 192.0.2.1
+```
 
-# 2. 部署代码自定义
 
-# 3.
+## 2.隔离网络
+
+## 2. 部署代码自定义
+
+## 3.
