--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -2,42 +2,29 @@
 
 ---
 
-## 1. 分配主机IP
-在使用isolation network部署overcloud时，所有的isolation netwrok IP 都会从`network-environment.yaml`定义的pool中获取。
+## 1.隔离网络
+在TripleO的默认部署中，所有的网络都走ControlPlane IP。那能不能把网络流量从ControlPlane IP 从分离出来，让每种用途的网络走自己的网卡或者VLAN？当然可以！
 
-**network-environment.yaml**
+
+## 2. 分配主机IP
+在使用isolation network部署overcloud时，所有的isolation netwrok IP 都会从`network-environment.yaml`定义的pool中获取。在部署生产环境时，一定不想让IP失控：每台节点都随机的从IP pool里随机挑选IP会让排错异常困难。因为你不知道哪个节点用哪个IP。
+
+**network-environment.yaml 节选** 
 ```yaml
-resource_registry:
-  OS::TripleO::BlockStorage::Net::SoftwareConfig: ../nic-configs/cinder-storage.yaml
-  OS::TripleO::Compute::Net::SoftwareConfig: ../nic-configs/compute.yaml
-  OS::TripleO::Controller::Net::SoftwareConfig: ../nic-configs/controller.yaml
-  OS::TripleO::ObjectStorage::Net::SoftwareConfig: ../nic-configs/swift-storage.yaml
-  OS::TripleO::CephStorage::Net::SoftwareConfig: ../nic-configs/ceph-storage.yaml
-
 parameter_defaults:
-  InternalApiNetCidr: 172.16.0.0/24
-  TenantNetCidr: 172.17.0.0/24
-  StorageNetCidr: 172.18.0.0/24
-  StorageMgmtNetCidr: 172.19.0.0/24
-  ManagementNetCidr: 172.20.0.0/24
-  ExternalNetCidr: 192.168.122.0/24
-  InternalApiAllocationPools: [{'start': '172.16.0.30', 'end': '172.16.0.40'}]
-  TenantAllocationPools: [{'start': '172.17.0.30', 'end': '172.17.0.40'}]
-  StorageAllocationPools: [{'start': '172.18.0.30', 'end': '172.18.0.40'}]
-  StorageMgmtAllocationPools: [{'start': '172.19.0.30', 'end': '172.19.0.40'}]
-  #ManagementAllocationPools: [{'start': '172.20.0.30', 'end': '172.20.0.40'}]
+  InternalApiAllocationPools: [{'start': '172.16.0.10', 'end': '172.16.0.200'}]
+  TenantAllocationPools: [{'start': '172.17.0.10', 'end': '172.17.0.200'}]
+  StorageAllocationPools: [{'start': '172.18.0.10', 'end': '172.18.0.200'}]
+  StorageMgmtAllocationPools: [{'start': '172.19.0.10', 'end': '172.19.0.200'}]
   # Leave room for floating IPs in the External allocation pool
-  ExternalAllocationPools: [{'start': '192.168.122.30', 'end': '192.168.122.40'}]
-  # Set to the router gateway on the external network
-  ExternalInterfaceDefaultRoute: 192.168.122.1
-  # Gateway router for the provisioning network (or Undercloud IP)
-  ControlPlaneDefaultRoute: 192.0.2.1
-  # The IP address of the EC2 metadata server. Generally the IP of the Undercloud
-  EC2MetadataIp: 192.0.2.1
+  ExternalAllocationPools: [{'start': '192.168.122.10', 'end': '192.168.122.200'}]
+
 ```
 
 
-## 2.隔离网络
+
+
+
 
 ## 2. 部署代码自定义
 
