--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -3,7 +3,21 @@
 ---
 
 ## 1.隔离网络
-在TripleO的默认部署中，所有的网络都走ControlPlane IP。那能不能把网络流量从ControlPlane IP 从分离出来，让每种用途的网络走自己的网卡或者VLAN？当然可以！
+在TripleO的默认部署中，所有的网络流量都走Provisioning Network。那能不能把每种类型的网络分离出来？当然可以！
+
+TripleO网络中有以下网络类型:
+
+```
+Network 1 - Provisioning
+Network 2 - Internal API
+Network 3 - Tenant Networks
+Network 4 - Storage
+Network 5 - Storage Management
+Network 6 - Management
+Network 7 - External and Floating IP (mapped after Overcloud creation)
+```
+
+
 
 
 ## 2. 分配主机IP
