--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -3,6 +3,7 @@
 ---
 
 ## 1.隔离网络
+
 在TripleO的默认部署中，所有的网络流量都走Provisioning Network。那能不能把每种类型的网络分离出来？当然可以！
 
 TripleO网络中有以下网络类型:
@@ -17,13 +18,21 @@ Network 6 - Management
 Network 7 - External and Floating IP (mapped after Overcloud creation)
 ```
 
-
-
+| 网络类型 | Subnet | VLAN |
+| :--- | :--- | :--- |
+| Internal API | 172.16.0.0/24 | 201 |
+| Tenant | 172.17.0.0/24 | 201 |
+| Storage | 172.18.0.0/24 | 201 |
+| Storage Management | 172.19.0.0/24 | 201 |
+| Management | 172.20.0.0/24 | 201 |
+| External / Floating IP | 192.168.122.0/24 | 201 |
 
 ## 2. 分配主机IP
+
 在使用isolation network部署overcloud时，所有的isolation netwrok IP 都会从`network-environment.yaml`定义的pool中获取。在部署生产环境时，一定不想让IP失控：每台节点都随机的从IP pool里随机挑选IP会让排错异常困难。因为你不知道哪个节点用哪个IP。
 
-**network-environment.yaml 节选** 
+**network-environment.yaml 节选**
+
 ```yaml
 parameter_defaults:
   InternalApiAllocationPools: [{'start': '172.16.0.10', 'end': '172.16.0.200'}]
@@ -32,14 +41,11 @@ parameter_defaults:
   StorageMgmtAllocationPools: [{'start': '172.19.0.10', 'end': '172.19.0.200'}]
   # Leave room for floating IPs in the External allocation pool
   ExternalAllocationPools: [{'start': '192.168.122.10', 'end': '192.168.122.200'}]
-
 ```
-
-
-
-
-
 
 ## 2. 部署代码自定义
 
 ## 3.
+
+
+
