--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -12,6 +12,12 @@
 | Block Storage Nodes | N | N | 一旦部署完成，Cinder节点不支持收缩或者扩展。 |
 | Object Storage Nodes | Y | Y | |
 
+## 增加计算节点
+
+在增加节点的时候，我们需要收集每一个新增节点的PXE网卡的MAC地址,然后定义我们的ironic的配置文件
+```
+
+```
 
 
 
