--- a/自定义Overcloud部署/定义主机.md
+++ b/自定义Overcloud部署/定义主机.md
@@ -26,6 +26,11 @@ ironic node-update <id> replace properties/capabilities='node:ceph-storage-1,boo
 ...
 ```
 
+也可以这样写
+```
+list=(`ironic node-list|grep control|awk '{print $2}'`);for i in {0..2};do ironic node-update ${list[$i]} replace properties/capabilities="node:controller-$i,boot_option:local";done
+```
+
 创建Heat Environment file ：
 **scheduler_hints_env.yaml**
 ```yaml
