--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -17,13 +17,18 @@ Network 5 - Storage Management
 Network 7 - External and Floating IP (mapped after Overcloud creation)
 ```
 
-| 网络类型 | Subnet | VLAN | 接口类型 |
-| :--- | :--- | :--- | :--- |
-| Internal API | 172.16.0.0/24 | 201 | access |
-| Tenant | 172.17.0.0/24 | 201 |  |
-| Storage | 172.18.0.0/24 | 201 |  |
-| Storage Management | 172.19.0.0/24 | 201 |  |
-| External / Floating IP | 192.168.122.0/24 | 201 |  |
+假设我们有如下网络,应该如何写网络配置文件。
+
+| 网络类型 | Subnet | VLAN |
+| :--- | :--- | :--- |
+| PXE/SSH | 192.0.2.0/24 | access |
+| Internal API | 172.16.0.0/24 | 201 |
+| Tenant | 172.17.0.0/24 | 202 |
+| Storage | 172.18.0.0/24 | 203 |
+| Storage Management | 172.19.0.0/24 | 204 |
+| External / Floating IP | 192.168.122.0/24 | 205 |
+
+
 
 ## 2. 分配主机IP
 
