--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -2,7 +2,7 @@
 
 ---
 
-## 1.隔离网络
+## 1.创建网络模板
 
 在TripleO的默认部署中，所有的网络流量都走Provisioning Network。那能不能把每种类型的网络分离出来？当然可以！
 
@@ -28,8 +28,7 @@ Network 7 - External and Floating IP (mapped after Overcloud creation)
 | Storage Management | 172.19.0.0/24 | 204 |
 | External / Floating IP | 192.168.122.0/24 | 205 |
 
-
-
+从``
 
 
 ## 2. 分配主机IP
