--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -53,3 +53,27 @@ parameter_defaults:
 
 
 
+**Vip registry**
+```
+resource_registry:
+  OS::TripleO::Network::Ports::NetVipMap: /usr/share/openstack-tripleo-heat-templates/network/ports/net_vip_map_external.yaml
+  OS::TripleO::Network::Ports::ExternalVipPort: /usr/share/openstack-tripleo-heat-templates/network/ports/noop.yaml
+  OS::TripleO::Network::Ports::InternalApiVipPort: /usr/share/openstack-tripleo-heat-templates/network/ports/noop.yaml
+  OS::TripleO::Network::Ports::StorageVipPort: /usr/share/openstack-tripleo-heat-templates/network/ports/noop.yaml
+  OS::TripleO::Network::Ports::StorageMgmtVipPort: /usr/share/openstack-tripleo-heat-templates/network/ports/noop.yaml
+  OS::TripleO::Network::Ports::RedisVipPort: /usr/share/openstack-tripleo-heat-templates/network/ports/from_service.yaml
+```
+
+**Vip parameter**
+```
+parameter_defaults:
+  ...
+  # Predictable VIPs
+  ControlPlaneIP: 192.168.0.230
+  ExternalNetworkVip: 10.1.1.190
+  InternalApiNetworkVip: 172.16.0.30
+  StorageNetworkVip: 172.18.0.30
+  StorageMgmtNetworkVip: 172.19.0.40
+  ServiceVips:
+    redis: 172.16.0.31
+```
