--- a/自定义Overcloud部署/定义主机.md
+++ b/自定义Overcloud部署/定义主机.md
@@ -9,7 +9,7 @@
 
 ## 1.1 分配节点
 
-在默认部署的情况下，tripleO 会从 ironic 中拥有的同一tag的node中任意挑选一台，这会导致ironic node-list 显示的主机与nova list 显示的主机编号不一致。可以通过为每个ironic node分配特定的属性解决以上问题。
+在默认部署的情况下，tripleO 会从 ironic 中拥有的同一tag的node中任意挑选一台，这会导致ironic node-list 显示的主机与nova list 显示的主机编号不一致。可以通过为每个ironic node分配`properties/capabilities`属性来解决。
 
 首先，为每个类型的node添加tag，例如第一台controller打上node:contoller-0 的tag，第二台controller 打上node:contoller-1的tag，以此类推。
 ```bash
@@ -26,12 +26,13 @@ ironic node-update <id> replace properties/capabilities='node:ceph-storage-1,boo
 ...
 ```
 
-也可以这样写
+一句话命令可以这样写
 ```
 list=(`ironic node-list|grep control|awk '{print $2}'`);for i in {0..2};do ironic node-update ${list[$i]} replace properties/capabilities="node:controller-$i,boot_option:local";done
 ```
 
-创建Heat Environment file ：
+在templates/environment 目录中创建`scheduler_hints_env.yaml`：
+
 **scheduler_hints_env.yaml**
 ```yaml
 parameter_defaults:
@@ -45,7 +46,7 @@ CephStorageSchedulerHints:
 
 在部署时使用这个Environment File,同时每个节点的flavor要选择baremetal。
 ```vim
-openstack overcloud deploy ....
+openstack overcloud deploy --template ....
   -e scheduler_hints_env.yaml \
   --control-flavor baremetal  \
   --compute-flavor baremetal \
@@ -54,7 +55,7 @@ openstack overcloud deploy ....
 ```
 
 
-共有这些Hints可以选择。
+一共有这些Hints可以选择。
 ```
 ControllerSchedulerHints for Controller nodes.
 NovaComputeSchedulerHints for Compute nodes.
@@ -91,4 +92,13 @@ parameter_defaults:
 ```
 
 同样的，在部署时，不要忘了附加 `scheduler_hints_env.yaml`。
+
+```vim
+openstack overcloud deploy --template ....
+-e scheduler_hints_env.yaml \
+--control-flavor baremetal \
+--compute-flavor baremetal \
+--ceph-storage-flavor baremetal
+···
+```
 
