--- a/部署前准备.md
+++ b/部署前准备.md
@@ -1,29 +1,51 @@
 ## 部署前准备
 
-部署虚拟环境也应该需要有详细的规划。
+部署虚拟环境也应该需要有详细的规划。对每一个网段的划分都应该明确的标出来。在实际的生产环境中往往通过vlan对网络进行隔离，在虚拟环境中我们同样可以使用ovs的网桥和Linux的网桥对数据进行隔离，以模拟VLAN环境。
 
-**表1-1 Overcloud 主机节点规划 \(e.g\)**
+**表1-1 网络规划 \(e.g\)**
 
-| 机架位置 | 主机类型 | IPMI 地址 | 第一块网卡的MAC |
+| 网络名称 | Network CIDR | 网桥类型 | 网桥 |
 | :--- | :--- | :--- | :--- |
-| Rack1 Row1 | Controller | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack1 Row2 | Controller | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack1 Row3 | Controller | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack2 Row1 | Compute | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack2 Row2 | Compute | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack2 Row3 | Compute | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack3 Row1 | Ceph | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack3 Row2 | Ceph | x.x.x.x | xx:xx:xx:xx:xx:xx |
-| Rack3 Row3 | Ceph | x.x.x.x | xx:xx:xx:xx:xx:xx |
+| undercloud ctlplane | 192.0.2.0/24 | ovs | brbm |
+| Storage | 10.0.133.0/24 | ovs | brbm1 |
+| Storage Mgmt | 10.0.132.0/24 | ovs | brbm4 |  |
+| Internal\_API | 10.0.131.0/24 | ovs | brbm2 |
+| External | 10.0.135.0/24 | ovs | brbrm3 |
+| Tenant | 10.0.136.0/24 | Linux briage | brbm5 |
 
-**表1-2 网络规划 \(e.g\)**
 
-| 网络名称 | Network CIDR | VLAN ID | 物理网卡 |
+**表1-2 undercloud网络配置 \(e.g\)**
+
+
+| 网卡名称 | Network CIDR | 所属网桥 | 功能 |
 | :--- | :--- | :--- | :--- |
-| undercloud ctlplane | 10.0.130.0/24 | 1 | em3 |
-| Storage | 10.0.133.0/24 | 4003 | em2 |
-| Storage Mgmt | 10.0.132.0/24 | 4002 | em2 |
-| Internal\_API | 10.0.131.0/24 | 4001 | em4 |
-| External | 10.0.135.0/24 | 4005 | em1 |
-| Tenant | 10.0.136.0/24 | 4006 | em1 |
+| eth0 | - | br-ctlplane | - |
+| eth1 | 192.168.122.0/24 | - | undercloud管理网 |
+| br-ctlplane | 192.0.2.0/24 | - | PXE对外网络 |
+
+**表1-3 control网络配置 \(e.g\)**
+
+
+| 网卡名称 | Network CIDR | 所属网桥 | 功能 |
+| :--- | :--- | :--- | :--- |
+| eth0 | 192.0.2.0/24 | - | PXE网络 |
+| eth1 | 10.0.133.0/24 | -| 功能 |
+| eth2 | 10.0.132.0/24  | - | 功能 |
+| eth3 | 10.0.131.0/24 | br-ctlplane| 功能 |
+| eth4 | - | - | 功能 |
+| eth5 | - | br-ctlplane| 功能 |
+| br-ex| 192.0.2.1/24 | - | 功能 |
+| br-tenant | 192.0.2.1/24 | - | 功能 |
+
+ 
+ **表1-4 compute网络配置 \(e.g\)**
+
+
+| 网卡名称 | Network CIDR | 所属网桥 |
+| :--- | :--- | :--- |
+| eth0 | 192.168.122.43/24 | - |
+| eth1 | - | br-ctlplane|
+| br-ctlplane | 192.0.2.1/24 | - |
+
+   
 
