--- a/部署前准备.md
+++ b/部署前准备.md
@@ -4,48 +4,53 @@
 
 **表1-1 网络规划 \(e.g\)**
 
-| 网络名称 | Network CIDR | 网桥类型 | 网桥 |
-| :--- | :--- | :--- | :--- |
-| undercloud ctlplane | 192.0.2.0/24 | ovs | brbm |
-| Storage | 10.0.133.0/24 | ovs | brbm1 |
-| Storage Mgmt | 10.0.132.0/24 | ovs | brbm4 |  |
-| Internal\_API | 10.0.131.0/24 | ovs | brbm2 |
-| External | 10.0.135.0/24 | ovs | brbrm3 |
-| Tenant | 10.0.136.0/24 | Linux briage | brbm5 |
+| 网络名称 | Network CIDR | 网桥类型 | 网桥 | 功能 |
+| :--- | :--- | :--- | :--- | :--- |
+| undercloud ctlplane | 192.0.2.0/24 | ovs | brbm | PXE网络 |
+| Storage | 10.0.133.0/24 | ovs | brbm1 | 存储网络 |
+| Storage Mgmt | 10.0.132.0/24 | ovs | brbm4 | 存储管理网 |
+| Internal\_API | 10.0.131.0/24 | ovs | brbm2 | 内部网络 |
+| External | 10.0.135.0/24 | ovs | brbrm3 | 对外网络 |
+| Tenant | 10.0.136.0/24 | Linux briage | brbm5 | SDN网络 |
 
+在进行下面的部署的时候，会默认安装3台虚拟主机，但是3太虚拟主机的网络配置不符合我们的模板要求，所以需要手动调整虚拟机的配置。关键是control节点和compute节点，各6个网卡。
 
 **表1-2 undercloud网络配置 \(e.g\)**
 
 
-| 网卡名称 | Network CIDR | 所属网桥 | 功能 |
+| 网卡名称 | Network CIDR | 所属网桥 | 
 | :--- | :--- | :--- | :--- |
-| eth0 | - | br-ctlplane | - |
-| eth1 | 192.168.122.0/24 | - | undercloud管理网 |
-| br-ctlplane | 192.0.2.0/24 | - | PXE对外网络 |
+| eth0 | - | br-ctlplane |
+| eth1 | 192.168.122.0/24 | - |
+| br-ctlplane | 192.0.2.0/24 | - | 
+
 
 **表1-3 control网络配置 \(e.g\)**
 
 
-| 网卡名称 | Network CIDR | 所属网桥 | 功能 |
+| 网卡名称 | Network CIDR | 所属网桥 |
 | :--- | :--- | :--- | :--- |
-| eth0 | 192.0.2.0/24 | - | PXE网络 |
-| eth1 | 10.0.133.0/24 | -| 功能 |
-| eth2 | 10.0.132.0/24  | - | 功能 |
-| eth3 | 10.0.131.0/24 | br-ctlplane| 功能 |
-| eth4 | - | - | 功能 |
-| eth5 | - | br-ctlplane| 功能 |
-| br-ex| 192.0.2.1/24 | - | 功能 |
-| br-tenant | 192.0.2.1/24 | - | 功能 |
+| eth0 | 192.0.2.0/24 | - | 
+| eth1 | 10.0.133.0/24 | -| 
+| eth2 | 10.0.132.0/24  | - | 
+| eth3 | 10.0.131.0/24 | - |
+| eth4 | - | br-tenant | 
+| eth5 | - | br-ex |
+| br-ex| 192.168.122.0/24 | - |
+| br-tenant | 10.0.136.0/24 | - |
+
 
  
  **表1-4 compute网络配置 \(e.g\)**
 
 
 | 网卡名称 | Network CIDR | 所属网桥 |
-| :--- | :--- | :--- |
-| eth0 | 192.168.122.43/24 | - |
-| eth1 | - | br-ctlplane|
-| br-ctlplane | 192.0.2.1/24 | - |
-
-   
-
+| :--- | :--- | :--- | :--- |
+| eth0 | 192.0.2.0/24 | - |
+| eth1 | 10.0.133.0/24 | -|
+| eth2 | 10.0.132.0/24 | - |
+| eth3 | 10.0.131.0/24 | - |
+| eth4 | - | br-tenant |
+| eth5 | - | br-ex |
+| br-ex| 192.168.122.0/24 | - |
+| br-tenant | 10.0.136.0/24 | - |
