--- a/第一章-TripleO部署实践/物理环境部署/物理环境部署.md
+++ b/第一章-TripleO部署实践/物理环境部署/物理环境部署.md
@@ -2,3 +2,14 @@
 
 ---
 
+下面介绍的是纯物理机的部署环境。我们这里准备了6台物理机，每台物理机的配置如下：
+```
+* 40 quad core CPU
+* 96 GB free memory
+* 240 GB ssd disk space /dev/sda
+* 240 GB ssd disk space /dev/sdb
+* 240 GB ssd disk space /dev/sdc
+* 2 Gigabit Ethernet
+* 2 NIC-TGSFP
+```
+
