--- a/Upgrade/模块升级.md
+++ b/Upgrade/模块升级.md
@@ -53,7 +53,7 @@ RH 针对 undercloud 的升级分了两个步骤：
 1. 制定一个 update plan
 命令示例如下，
 ```shell
-openstack overcloud deploy overcloud -i --update-plan-only \
+openstack overcloud deploy --stack overcloud -i --update-plan-only \
   --templates  \
   -e /usr/share/openstack-tripleo-heat-templates/environments/network-isolation.yaml \
   -e /home/stack/templates/network-environment.yaml \
