--- a/Upgrade/模块升级.md
+++ b/Upgrade/模块升级.md
@@ -46,7 +46,7 @@ openstack undercloud upgrade
 openstack overcloud image upload --update-existing --image-path ~/images/.
 ```
 
-## 升级 undercloud
+## 升级 overcloud
 
 RH 针对 undercloud 的升级分了两个步骤：
 
