--- a/自定义Overcloud部署/定义主机.md
+++ b/自定义Overcloud部署/定义主机.md
@@ -2,16 +2,14 @@
 
 ---
 
-
 在部署overcloud的过程中，我们一定有很多需要自定义的地方。那么TripleO是如何实现自定义参数部署的呢？我们通过下面几个章节一一说明。
-
-
 
 ## 1.1 分配节点
 
 在默认部署的情况下，tripleO 会从 ironic 中拥有的同一tag的node中任意挑选一台，这会导致ironic node-list 显示的主机与nova list 显示的主机编号不一致。可以通过为每个ironic node分配`properties/capabilities`属性来解决。
 
 首先，为每个类型的node添加tag，例如第一台controller打上node:contoller-0 的tag，第二台controller 打上node:contoller-1的tag，以此类推。
+
 ```bash
 ironic node-update <id> replace properties/capabilities='node:controller-0,boot_option:local'
 ironic node-update <id> replace properties/capabilities='node:controller-1,boot_option:local'
@@ -27,13 +25,13 @@ ironic node-update <id> replace properties/capabilities='node:ceph-storage-1,boo
 ```
 
 一句话命令可以这样写
-```
-list=(`ironic node-list|grep control|awk '{print $2}'`);for i in {0..2};do ironic node-update ${list[$i]} replace properties/capabilities="node:controller-$i,boot_option:local";done
-```
+
+    list=(`ironic node-list|grep control|awk '{print $2}'`);for i in {0..2};do ironic node-update ${list[$i]} replace properties/capabilities="node:controller-$i,boot_option:local";done
 
 在templates/environment 目录中创建`scheduler_hints_env.yaml`：
 
-**scheduler_hints_env.yaml**
+**scheduler\_hints\_env.yaml**
+
 ```yaml
 parameter_defaults:
 ControllerSchedulerHints:
@@ -45,6 +43,7 @@ CephStorageSchedulerHints:
 ```
 
 在部署时使用这个Environment File,同时每个节点的flavor要选择baremetal。
+
 ```vim
 openstack overcloud deploy --template ....
   -e scheduler_hints_env.yaml \
@@ -54,8 +53,8 @@ openstack overcloud deploy --template ....
   ...
 ```
 
-
 一共有这些Hints可以选择。
+
 ```
 ControllerSchedulerHints for Controller nodes.
 NovaComputeSchedulerHints for Compute nodes.
@@ -65,13 +64,12 @@ CephStorageSchedulerHints for Ceph Storage nodes.
 [ROLE]SchedulerHints for custom roles. Replace [ROLE] with the role name.
 ```
 
-
-
-
 ## 1.2 分配主机名
+
 结合1.1 分配节点ID，还可以自定义每个节点的主机名。
 
-**scheduler_hints_env.yaml**
+**scheduler\_hints\_env.yaml**
+
 ```yaml
 parameter_defaults:
   ControllerSchedulerHints:
@@ -101,4 +99,6 @@ openstack overcloud deploy --template ....
 --ceph-storage-flavor baremetal
 ···
 ```
+
+
 
