--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -2,7 +2,7 @@
 
 ---
 
-## 1.创建网络模板
+## 1.创建隔离网络
 
 在TripleO的默认部署中，所有的网络流量都走Provisioning Network。那能不能把每种类型的网络分离出来？当然可以！
 
@@ -28,26 +28,77 @@ Network 7 - External and Floating IP (mapped after Overcloud creation)
 | Storage Management | 172.19.0.0/24 | 204 |
 | External / Floating IP | 192.168.122.0/24 | 205 |
 
-从``
 
+编写**network-environment.yaml**
+```
+resource_registry:
+  # 为每个类型的节点指定网卡配置文件 (这些文件必须存在)
+  OS::TripleO::BlockStorage::Net::SoftwareConfig:
+    ../network/config/single-nic-vlans/cinder-storage.yaml
+  OS::TripleO::Compute::Net::SoftwareConfig:
+    ../network/config/single-nic-vlans/compute.yaml
+  OS::TripleO::Controller::Net::SoftwareConfig:
+    ../network/config/single-nic-vlans/controller.yaml
+  OS::TripleO::ObjectStorage::Net::SoftwareConfig:
+    ../network/config/single-nic-vlans/swift-storage.yaml
+  OS::TripleO::CephStorage::Net::SoftwareConfig:
+    ../network/config/single-nic-vlans/ceph-storage.yaml
 
-## 2. 分配主机IP
-
-在使用isolation network部署overcloud时，所有的isolation netwrok IP 都会从`network-environment.yaml`定义的pool中获取。在部署生产环境时，一定不想让IP失控：每台节点都随机的从IP pool里随机挑选IP会让排错异常困难。因为你不知道哪个节点用哪个IP。
-
-**network-environment.yaml 节选**
-
-```yaml
 parameter_defaults:
-  InternalApiAllocationPools: [{'start': '172.16.0.10', 'end': '172.16.0.200'}]
-  TenantAllocationPools: [{'start': '172.17.0.10', 'end': '172.17.0.200'}]
-  StorageAllocationPools: [{'start': '172.18.0.10', 'end': '172.18.0.200'}]
-  StorageMgmtAllocationPools: [{'start': '172.19.0.10', 'end': '172.19.0.200'}]
-  # Leave room for floating IPs in the External allocation pool
-  ExternalAllocationPools: [{'start': '192.168.122.10', 'end': '192.168.122.200'}]
+  # This section is where deployment-specific configuration is done
+  # PXE(也叫ControlPlane)网络的掩码
+  ControlPlaneSubnetCidr: '24'
+  # PXE网络的网关，使用Management网络时也需要填写。
+  ControlPlaneDefaultRoute: 10.0.131.1
+  EC2MetadataIp: 10.0.131.2  # Generally the IP of the Undercloud
+  # 指定各种网络的子网
+  InternalApiNetCidr: 10.0.132.0/24
+  StorageNetCidr: 10.0.133.0/24
+  StorageMgmtNetCidr: 10.0.134.0/24
+  TenantNetCidr: 10.0.135.0/24
+  ExternalNetCidr: 10.0.136.0/24
+  # 指定各类网络的vlan id
+  InternalApiNetworkVlanID: 4002
+  StorageNetworkVlanID: 4003
+  StorageMgmtNetworkVlanID: 4004
+  TenantNetworkVlanID: 4005
+  ExternalNetworkVlanID: 4006
+  # 指定各类网络的IP地址范围 (IP和Vip)
+  InternalApiAllocationPools: [{'start': '10.0.132.51', 'end': '10.0.132.80'}]
+  StorageAllocationPools: [{'start': '10.0.133.51', 'end': '10.0.133.80'}]
+  StorageMgmtAllocationPools: [{'start': '10.0.134.51', 'end': '10.0.134.80'}]
+  TenantAllocationPools: [{'start': '10.0.135.51', 'end': '10.0.135.80'}]
+  # Leave room if the external network is also used for floating IPs 
+  ExternalAllocationPools: [{'start': '10.0.136.51', 'end': '10.0.136.200'}]
+  # External 网络的网关
+  ExternalInterfaceDefaultRoute: 10.0.136.1
+  # Management 网络
+  ManagementNetCidr: 10.0.130.0/24
+  ManagementAllocationPools: [{'start': '10.0.130.51', 'end', '10.0.130.80'}]
+  # Use either this parameter or ControlPlaneDefaultRoute in the NIC templates
+  ManagementInterfaceDefaultRoute: 10.0.130.1
+  # Define the DNS servers (maximum 2) for the overcloud nodes
+  DnsServers: ["119.29.29.29","8.8.4.4"]
+  # Set to empty string to enable multiple external networks or VLANs
+  NeutronExternalNetworkBridge: "''"
+  # The tunnel type for the tenant network (vxlan or gre). Set to '' to disable tunneling.
+  NeutronTunnelTypes: 'vxlan'
+  NeutronTenantNetwork: 'vxlan'
+  # Customize bonding options, e.g. "mode=4 lacp_rate=1 updelay=1000 miimon=100"
+  BondInterfaceOvsOptions: "bond_mode=active-backup"
+  NeutronBridgeMappings: "datacentre:br-ex"
+  NeutronNetworkVLANRanges:  "datacentre:4007:4015"
 ```
 
-## 2. 部署代码自定义
+## 2. 为主机指定IP
+
+在使用isolation network部署overcloud时，所有的isolation netwrok IP 都会从`network-environment.yaml`定义的pool中获取。在部署生产环境时，一定不想让IP可控：每台节点都随机的从IP pool里随机挑选IP会让排错异常困难。因为你不知道哪个节点用哪个IP。那么 How？
+
+
+## 3. 部署代码自定义
+
+
+
 
 ## 3.
 
