--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -84,9 +84,11 @@ parameter_defaults:
   # The tunnel type for the tenant network (vxlan or gre). Set to '' to disable tunneling.
   NeutronTunnelTypes: 'vxlan'
   NeutronTenantNetwork: 'vxlan'
-  # Customize bonding options, e.g. "mode=4 lacp_rate=1 updelay=1000 miimon=100"
+  # bond 网络类型
   BondInterfaceOvsOptions: "bond_mode=active-backup"
+  # external 网络别名
   NeutronBridgeMappings: "datacentre:br-ex"
+  # external vlan网络范围
   NeutronNetworkVLANRanges:  "datacentre:4007:4015"
 ```
 
