--- a/自定义Overcloud部署/自定义网络.md
+++ b/自定义Overcloud部署/自定义网络.md
@@ -96,8 +96,22 @@ parameter_defaults:
 
 在使用isolation network部署overcloud时，所有的isolation netwrok IP 都会从`network-environment.yaml`定义的pool中获取。在部署生产环境时，一定不想让IP可控：每台节点都随机的从IP pool里随机挑选IP会让排错异常困难。因为你不知道哪个节点用哪个IP。那么 How？
 
+要为主机指定固定IP，需要`ips-from-pool-all.yaml` 
+```
+$ cp /usr/share/openstack-tripleo-heat-templates/environments/ips-from-pool-all.yaml ~/templates/
+```
+
+在`ips-from-pool-all.yaml`中指定IP
+```
+
+```
+
+
+
 
 ## 3. 部署代码自定义
+
+
 
 
 
