--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -17,9 +17,29 @@
 在增加节点的时候，我们需要收集每一个新增节点的PXE网卡的MAC地址,然后定义我们的ironic的配置文件
 
 ```
-
+{
+"nodes": [
+    {
+      "pm_user": "root",
+      "arch": "x86_64",
+      "name": "10.0.10.126_compute",
+      "pm_addr": "10.0.10.126",
+      "pm_password": "XXXX",
+      "pm_type": "pxe_ipmitool",
+      "mac": [
+        "24:6E:96:06:2E:04"
+      ],
+      "cpu": "32",
+      "memory": "8192",
+      "disk": "599"
+    }
+]
 ```
 
+然后我们需要在ironic中注册这个物理机：
+```
+
+```
 
 
 ## 删除计算节点
