--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -38,7 +38,7 @@
 
 然后我们需要在ironic中注册这个物理机：
 ```
-openstack baremetal import newnode.json
+$ openstack baremetal import newnode.json
 ```
 然后开始收集这台物理机的硬件信息：
 ```
