--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -36,21 +36,26 @@
 ]
 ```
 
-然后我们需要在ironic中注册这个物理机：
+然后我们需要在ironic中注册这个物理机:
 ```
 $ openstack baremetal import newnode.json
 ```
-然后开始收集这台物理机的硬件信息：
+然后开始收集这台物理机的硬件信息:
 ```
 $ openstack baremetal node manage <NODE UUID>
 $ openstack overcloud node introspect <NODE UUID> --provide
 ```
 
-然后定义物理机的角色：
+然后定义物理机的角色:
 ```
 openstack baremetal node set --property capabilities='profile:compute,boot_option:local' <NODE UUID>
 ```
-
+之后就开始拓展新增节点:
+```
+$ openstack overcloud deploy --templates --compute-scale 5
+[OTHER_OPTIONS]
+```
+拓展节点的时候记得要加上你的其他的环境参数，如果缺了哪一个环境参数你的环境就很有可能被修改。
 
 
 ## 删除计算节点
