--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -55,7 +55,7 @@ openstack baremetal node set --property capabilities='profile:compute,boot_optio
 $ openstack overcloud deploy --templates --compute-scale 5
 [OTHER_OPTIONS]
 ```
-拓展节点的时候记得要加上你的其他的环境参数，如果缺了哪一个环境参数你的环境就很有可能被修改。
+拓展节点的时候记得要加上你的其他的环境参数，如果缺了哪一个环境参数你的环境就很有可能被修改。所以，在第一次部署完成之后或者使用tripleO变更之后，就把你的部署脚本录入版本控制库是一个很好的习惯，这样可以对你们的overcloud进行有效的版本控制。
 
 
 ## 删除计算节点
