--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -7,49 +7,93 @@
 | 节点类型 | 扩展? | 收缩? | 备注 |
 | :--- | :--- | --- | --- |
 | Controller | N | N | 一旦部署完成，控制节点不支持收缩或者扩展。 |
-| Compute | Y | Y | |
+| Compute | Y | Y |  |
 | Ceph Storage Nodes | Y | N | 在部署时至少有一个ceph节点时，才支持扩展。 |
 | Block Storage Nodes | N | N | 一旦部署完成，Cinder节点不支持收缩或者扩展。 |
-| Object Storage Nodes | Y | Y | |
+| Object Storage Nodes | Y | Y |  |
 
 ## 增加计算节点
 
-在增加节点的时候，我们需要收集每一个新增节点的PXE网卡的MAC地址,然后定义我们的ironic的配置文件
+如何新增计算节点：
+
+1. 收集硬件信息，编写节点配置文件。
+2. 导入节点配置。
+3. introspection 新增节点。
+4. 定义新增节点的根磁盘 
+5. 定义新增节点的capability。
+6. 修改ComputeCount
+7. 执行openstack overcloud deploy 
+
+
+### 收集硬件信息
+我们需要收集每一个新增节点的PXE网卡的MAC地址,然后定义新增节点的配置文件。
+
+新增节点的json文件
 
 ```
-
+{
+"nodes": [
+    {
+      "pm_user": "root",
+      "arch": "x86_64",
+      "name": "10.0.10.126_compute",
+      "pm_addr": "10.0.10.126",
+      "pm_password": "PQ79ISF7ha7G",
+      "pm_type": "pxe_ipmitool",
+      "mac": [
+        "24:6E:96:06:2E:05"
+      ],
+      "cpu": "32",
+      "memory": "8192",
+      "disk": "599"
+    }
+  ]
+}
 ```
 
+### 导入节点配置
 
+
+### introspection 新增节点
+
+### 定义新增节点的根磁盘
+
+### 定义新增节点的
 
 ## 删除计算节点
 
 1. 删除计算节点前，先把VM从当前计算节点前迁移出去
 2. 在overcloud中，禁用nova service。
 3. 在 undercloud中，查询stack 名称
-```
-$ heat stack-list
-```
+   ```
+   $ heat stack-list
+   ```
 4. 在undercloud中，查询要删除的nova compute 节点的UUID
-```
-openstack overcloud node delete --stack [STACK_UUID] --templates \
--e [ENVIRONMENT_FILE] [NODE1_UUID] [NODE2_UUID] [NODE3_UUID]
-```
-> 在删除节点时需要使用和部署时一样的environment参数(e.g. -e 或者 --environment-file)。不需要其他的参数。
+
+   ```
+   openstack overcloud node delete --stack [STACK_UUID] --templates \
+   -e [ENVIRONMENT_FILE] [NODE1_UUID] [NODE2_UUID] [NODE3_UUID]
+   ```
+
+   > 在删除节点时需要使用和部署时一样的environment参数\(e.g. -e 或者 --environment-file\)。不需要其他的参数。
 
 5. 在删除nova-service
-```
-$ source ~/stack/overcloudrc
-$ nova service-delete [service-id]
-$ source ~/stack/stackrc
-```
+
+   ```
+   $ source ~/stack/overcloudrc
+   $ nova service-delete [service-id]
+   $ source ~/stack/stackrc
+   ```
+
 6. 删除nuetro agent
-```
-$ source ~/stack/overcloudrc
-$ neutron agent-list
-$ neutron agent-delete [openvswitch-service-id]
-$ source ~/stack/stackrc
-```
+   ```
+   $ source ~/stack/overcloudrc
+   $ neutron agent-list
+   $ neutron agent-delete [openvswitch-service-id]
+   $ source ~/stack/stackrc
+   ```
 
 ## 参考
-https://access.redhat.com/documentation/en/red-hat-openstack-platform/10/paged/director-installation-and-usage/chapter-8-scaling-the-overcloud
+
+[https://access.redhat.com/documentation/en/red-hat-openstack-platform/10/paged/director-installation-and-usage/chapter-8-scaling-the-overcloud](https://access.redhat.com/documentation/en/red-hat-openstack-platform/10/paged/director-installation-and-usage/chapter-8-scaling-the-overcloud)
+
