--- a/自定义Overcloud部署/基本配置参数定义.md
+++ b/自定义Overcloud部署/基本配置参数定义.md
@@ -3,6 +3,6 @@
 ---
 
 所有的tripleo的都是通过注册模板，然后定义参数来实现对底层模块的调用的。
-* overcloud.j2.yaml - Default base parameters
-* roles_data.yaml - Default parameters for composable roles
-* puppet/services/*.yaml - Default parameters for specific services
+* overcloud.j2.yaml 这个是我们overcloud的基础模板
+* roles_data.yaml  这个是我们的角色定义的模板
+* puppet/services/*.yaml 这个是我们的puppet模块的模板
