--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -30,6 +30,7 @@
 
 新增节点的json文件
 
+**newnode.json**
 ```
 {
 "nodes": [
@@ -53,12 +54,54 @@
 
 ### 导入节点配置
 
+```
+$ openstack baremetal import newnode.json
+```
 
 ### introspection 新增节点
+```
+$ openstack baremetal node manage <NODE UUID>
+$ openstack overcloud node introspect <NODE UUID> --provide
+```
+
+
 
 ### 定义新增节点的根磁盘
 
-### 定义新增节点的
+查看新增加点的磁盘信息，找出定义类型的参数，比如name 或者 wwn
+```
+openstack baremetal introspection data save <NODE UUID> | jq ".inventory.disks" 
+
+[
+  {
+    "size": 500107862016,
+    "rotational": false,
+    "vendor": "ATA",
+    "name": "/dev/sda",
+    "wwn_vendor_extension": null,
+    "wwn_with_extension": "0x5002538da029699b",
+    "model": "Samsung SSD 850",
+    "wwn": "0x5002538da029699b",
+    "serial": "5002538da029699b"
+  }
+]
+```
+
+比如这里使用wwn定义跟磁盘：
+```
+#wwn
+ironic node-update $i add properties/root_device=properties/root_device='{"wwn": "xxx"}'
+```
+
+
+### 定义新增节点的类型
+```
+openstack baremetal node set --property capabilities='profile:compute,boot_option:local' <NODE UUID>
+```
+
+拓展节点的时候记得要加上你的其他的环境参数，如果缺了哪一个环境参数你的环境就很有可能被修改。所以，在第一次部署完成之后或者使用tripleO变更之后，就把你的部署脚本录入版本控制库是一个很好的习惯，这样可以对你们的overcloud进行有效的版本控制。
+
+
 
 ## 删除计算节点
 
