--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -93,13 +93,37 @@ openstack baremetal introspection data save <NODE UUID> | jq ".inventory.disks"
 ironic node-update $i add properties/root_device=properties/root_device='{"wwn": "xxx"}'
 ```
 
-
 ### 定义新增节点的类型
 ```
-openstack baremetal node set --property capabilities='profile:compute,boot_option:local' <NODE UUID>
+ironic node-update <NODE-UUID> add properties/capabilities='profile:compute,boot_option:local'
 ```
 
-拓展节点的时候记得要加上你的其他的环境参数，如果缺了哪一个环境参数你的环境就很有可能被修改。所以，在第一次部署完成之后或者使用tripleO变更之后，就把你的部署脚本录入版本控制库是一个很好的习惯，这样可以对你们的overcloud进行有效的版本控制。
+### 修改部署environment中，计算节点的数量
+
+**原始base-environment.yaml**
+```
+parameter_defaults:
+  ControllerCount: 3
+  ComputeCount: 2
+  OvercloudControlFlavor: control
+  OvercloudComputeFlavor: compute
+  NtpServer: 0.pool.ntp.org
+  NeutronEnableIsolatedMetadata: true
+```
+
+**修改后base-environment.yaml**
+```
+parameter_defaults:
+  ControllerCount: 3
+  ComputeCount: 3
+  OvercloudControlFlavor: control
+  OvercloudComputeFlavor: compute
+  NtpServer: 0.pool.ntp.org
+  NeutronEnableIsolatedMetadata: true
+```
+
+
+**注意！扩展节点的时候需要使用部署时所有的参数，如果缺了哪一个环境参数，在更新stack时可能会失败。所以，在一个stack第一次部署完成之后或者使用tripleO变更之后，就把你的部署脚本录入版本控制库是一个很好的习惯，这样可以对你们的overcloud进行有效的版本控制。**
 
 
 
