--- a/自定义Overcloud部署/基本配置参数定义.md
+++ b/自定义Overcloud部署/基本配置参数定义.md
@@ -6,3 +6,17 @@
 * overcloud.j2.yaml 这个是我们overcloud的基础模板
 * roles_data.yaml  这个是我们的角色定义的模板
 * puppet/services/*.yaml 这个是我们的puppet模块的模板
+
+有时候，我们需要在部署的时候指定一些组件的一些默认配置，我们可以定义puppet的一些的默认的参数，来控制部署过程中的参数定义。下面就以几个例子来讲解：
+
+## Example 1
+假设我们需要修改ceilometer部署过程中默认使用的数据库:
+
+```yaml
+resource_registry:
+OS::TripleO::BlockStorage::Net::SoftwareConfig:
+/usr/share/openstack-tripleo-heat-templates/puppet/services/ceilometer-base.yaml
+
+parameter_defaults:
+
+```
