--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -123,7 +123,7 @@ parameter_defaults:
 ```
 
 
-**注意！扩展节点的时候需要使用部署时所有的参数，如果缺了哪一个环境参数，在更新stack时可能会失败。所以，在一个stack第一次部署完成之后或者使用tripleO变更之后，就把你的部署脚本录入版本控制库是一个很好的习惯，这样可以对你们的overcloud进行有效的版本控制。**
+**注意：扩展节点的时候需要使用部署时所有的参数，如果缺了哪一个环境参数，在更新stack时可能会失败。所以，在一个stack第一次部署完成之后或者使用tripleO变更之后，就把你的部署脚本录入版本控制库是一个很好的习惯，这样可以对你们的overcloud进行有效的版本控制。**
 
 
 
