--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -14,6 +14,8 @@
 
 ## 增加计算节点
 
+**注意！ 本章节不讨论自定义的计算节点的伸缩。**
+
 如何新增计算节点：
 
 1. 收集硬件信息，编写节点配置文件。
@@ -24,13 +26,14 @@
 6. 修改ComputeCount
 7. 执行openstack overcloud deploy 
 
-
 ### 收集硬件信息
+
 我们需要收集每一个新增节点的PXE网卡的MAC地址,然后定义新增节点的配置文件。
 
 新增节点的json文件
 
 **newnode.json**
+
 ```
 {
 "nodes": [
@@ -59,16 +62,16 @@ $ openstack baremetal import newnode.json
 ```
 
 ### introspection 新增节点
+
 ```
 $ openstack baremetal node manage <NODE UUID>
 $ openstack overcloud node introspect <NODE UUID> --provide
 ```
 
-
-
 ### 定义新增节点的根磁盘
 
 查看新增加点的磁盘信息，找出定义类型的参数，比如name 或者 wwn
+
 ```
 openstack baremetal introspection data save <NODE UUID> | jq ".inventory.disks" 
 
@@ -88,12 +91,14 @@ openstack baremetal introspection data save <NODE UUID> | jq ".inventory.disks"
 ```
 
 比如这里使用wwn定义跟磁盘：
+
 ```
 #wwn
 ironic node-update $i add properties/root_device=properties/root_device='{"wwn": "xxx"}'
 ```
 
 ### 定义新增节点的类型
+
 ```
 ironic node-update <NODE-UUID> add properties/capabilities='profile:compute,boot_option:local'
 ```
@@ -101,6 +106,7 @@ ironic node-update <NODE-UUID> add properties/capabilities='profile:compute,boot
 ### 修改部署environment中，计算节点的数量
 
 **原始base-environment.yaml**
+
 ```
 parameter_defaults:
   ControllerCount: 3
@@ -112,6 +118,7 @@ parameter_defaults:
 ```
 
 **修改后base-environment.yaml**
+
 ```
 parameter_defaults:
   ControllerCount: 3
@@ -122,20 +129,26 @@ parameter_defaults:
   NeutronEnableIsolatedMetadata: true
 ```
 
-
 **注意！扩展节点的时候需要使用部署时所有的参数，如果缺了哪一个环境参数，在更新stack时可能会失败。所以，在一个stack第一次部署完成之后或者使用tripleO变更之后，就把你的部署脚本录入版本控制库是一个很好的习惯，这样可以对你们的overcloud进行有效的版本控制。**
-
-
 
 ## 删除计算节点
 
-1. 删除计算节点前，先把VM从当前计算节点前迁移出去
-2. 在overcloud中，禁用nova service。
-3. 在 undercloud中，查询stack 名称
+如何删除计算节点：
+
+1. 禁用被删除节点 nova service。
+2. 迁移被删除计算节点中的instance。
+3. 删除它的 nova service
+4. 删除它的 neutron-agent
+
+
+
+
+
+1. 在 undercloud中，查询stack 名称
    ```
    $ heat stack-list
    ```
-4. 在undercloud中，查询要删除的nova compute 节点的UUID
+2. 在undercloud中，查询要删除的nova compute 节点的UUID
 
    ```
    openstack overcloud node delete --stack [STACK_UUID] --templates \
@@ -144,7 +157,7 @@ parameter_defaults:
 
    > 在删除节点时需要使用和部署时一样的environment参数\(e.g. -e 或者 --environment-file\)。不需要其他的参数。
 
-5. 在删除nova-service
+3. 在删除nova-service
 
    ```
    $ source ~/stack/overcloudrc
@@ -152,7 +165,8 @@ parameter_defaults:
    $ source ~/stack/stackrc
    ```
 
-6. 删除nuetro agent
+4. 删除nuetro agent
+
    ```
    $ source ~/stack/overcloudrc
    $ neutron agent-list
