--- a/自定义Overcloud部署/基本配置参数定义.md
+++ b/自定义Overcloud部署/基本配置参数定义.md
@@ -10,13 +10,19 @@
 有时候，我们需要在部署的时候指定一些组件的一些默认配置，我们可以定义puppet的一些的默认的参数，来控制部署过程中的参数定义。下面就以几个例子来讲解：
 
 ## Example 1
-假设我们需要修改ceilometer部署过程中默认使用的数据库:
-
+假设我们需要修改ceilometer部署过程中默认使用的数据库，我们把对ceilometer配置都写在ceilometer-deploy.yaml文件里面：
 ```yaml
 resource_registry:
-OS::TripleO::BlockStorage::Net::SoftwareConfig:
+OS::TripleO::Services::CeilometerCollector:
 /usr/share/openstack-tripleo-heat-templates/puppet/services/ceilometer-base.yaml
 
 parameter_defaults:
-
+  CeilometerMeterDispatcher: database
 ```
+
+紧接着就是在`openstack overcloud deploy`加上这个文件:
+```
+openstack overcloud deploy --template -e ceilometer-deploy.yaml
+  [OTHER_OPTIONS]
+```
+
