--- a/SCALING/删除计算节点.md
+++ b/SCALING/删除计算节点.md
@@ -8,7 +8,7 @@
 | :--- | :--- | --- | --- |
 | Controller | N | N | 一旦部署完成，控制节点不支持收缩或者扩展。 |
 | Compute | Y | Y |  |
-| Ceph Storage Nodes | Y | N | 在部署时至少有一个ceph节点时，才支持扩展。 |
+| Ceph Storage Nodes | Y | Y | 在部署时至少有一个ceph节点时，才支持扩展。 |
 | Block Storage Nodes | N | N | 一旦部署完成，Cinder节点不支持收缩或者扩展。 |
 | Object Storage Nodes | Y | Y |  |
 
