--- a/前言.md
+++ b/前言.md
@@ -2,4 +2,4 @@
 
 ---
 
-这里讨论的一切都是基于openstack newton 以及 TripleO newton。之前的版本不在这本书的讨论范围之内。这本书如有更新，会cover之后的版本。
+这里讨论的一切都是基于openstack newton 以及 TripleO newton。之前的版本不在这本书的讨论范围之内。
