--- a/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
+++ b/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
@@ -1,13 +1,35 @@
 准备虚拟环境
 ---
 
-搭建一个虚拟环境需要：
-在物理机上创建一个stack用户
-将stack用户添加root权限
-配置yum源
-安装instack-undercloud
-设计虚拟环境的环境变量
-安装
 
+1. 在物理机上创建stack用户
 
+```bash
+sudo useradd stack
+sudo passwd stack  # specify a password
 
+echo "stack ALL=(root) NOPASSWD:ALL" | sudo tee -a /etc/sudoers.d/stack
+sudo chmod 0440 /etc/sudoers.d/stack
+
+su - stack
+```
+
+2. 配置yum源
+```
+a
+```
+
+4. 安装instack-undercloud
+```
+a
+```
+
+5. 配置instack环境变量
+```
+a
+```
+
+6. 部署虚拟环境
+```
+a
+```
