--- a/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
+++ b/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
@@ -26,7 +26,32 @@ a
 
 5. 配置instack环境变量
 ```
-a
+[DEFAULT]
+local_ip = 192.0.2.1/24
+network_gateway = 192.0.2.1
+undercloud_public_vip = 192.0.2.2
+undercloud_admin_vip = 192.0.2.3
+local_interface = eth1
+network_cidr = 192.0.2.0/24
+masquerade_network = 192.0.2.0/24
+dhcp_start = 192.0.2.5
+dhcp_end = 192.0.2.24
+hieradata_override = /home/stack/foo.yaml
+inspection_interface = br-ctlplane
+inspection_iprange = 192.0.2.100,192.0.2.120
+inspection_extras = true
+inspection_runbench = false
+inspection_enable_uefi = true
+undercloud_debug = true
+enable_tempest = true
+enable_mistral = true
+enable_zaqar = true
+enable_telemetry = true
+enable_ui = true
+enable_validations = true
+ipxe_enabled = true
+store_events = false
+[auth]
 ```
 
 6. 部署虚拟环境
