--- a/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
+++ b/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
@@ -26,32 +26,15 @@ a
 
 5. 配置instack环境变量
 ```
-[DEFAULT]
-local_ip = 192.0.2.1/24
-network_gateway = 192.0.2.1
-undercloud_public_vip = 192.0.2.2
-undercloud_admin_vip = 192.0.2.3
-local_interface = eth1
-network_cidr = 192.0.2.0/24
-masquerade_network = 192.0.2.0/24
-dhcp_start = 192.0.2.5
-dhcp_end = 192.0.2.24
-hieradata_override = /home/stack/foo.yaml
-inspection_interface = br-ctlplane
-inspection_iprange = 192.0.2.100,192.0.2.120
-inspection_extras = true
-inspection_runbench = false
-inspection_enable_uefi = true
-undercloud_debug = true
-enable_tempest = true
-enable_mistral = true
-enable_zaqar = true
-enable_telemetry = true
-enable_ui = true
-enable_validations = true
-ipxe_enabled = true
-store_events = false
-[auth]
+export NODE_DIST=centos7
+export NODE_COUNT=9
+export NODE_CPU=2
+export NODE_MEM=6144
+export NODE_DISK=40
+export UNDERCLOUD_NODE_CPU=4
+export UNDERCLOUD_NODE_MEM=16384
+export UNDERCLOUD_NODE_DISK=50
+export DIB_LOCAL_IMAGE=CentOS-7-x86_64-GenericCloud-1611.qcow2
 ```
 
 6. 部署虚拟环境
