--- a/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
+++ b/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
@@ -16,12 +16,12 @@ su - stack
 
 2. 配置yum源
 ```
-a
+
 ```
 
 4. 安装instack-undercloud
 ```
-a
+sudo yum install instack-undercloud -y 
 ```
 
 5. 配置instack环境变量
