Track 29 files into repository.
- removed Customization Ceph/README.md
- removed Customization Ceph/自定义ceph部署.md
- modified 封面.md
- modified 第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
- modified 第一章-TripleO部署实践/虚拟环境部署/安装undercloud.md
- modified 第一章-TripleO部署实践/虚拟环境部署/部署overcloud.md
- untracked 第二章 - TripleO自定义/overcloudironic.md
- untracked 第二章 - TripleO自定义/README.md
- untracked 第二章 - TripleO自定义/ssltls配置.md
- untracked 第二章 - TripleO自定义/xiu-gai-teding-jie-dian-de-hiera.md
- untracked 第二章 - TripleO自定义/zi-ding-yi-overcloud-roles.md
- untracked 第二章 - TripleO自定义/主机属性配置.md
- untracked 第二章 - TripleO自定义/定义主机.md
- untracked 第二章 - TripleO自定义/定制化部署.md
- untracked 第二章 - TripleO自定义/自定义ceph部署.md
- untracked 第二章 - TripleO自定义/自定义Overcloud部署.md
- untracked 第二章 - TripleO自定义/自定义role.md
- untracked 第二章 - TripleO自定义/自定义网络.md
- removed 自定义Overcloud部署/hook设置.md
- modified 自定义Overcloud部署/overcloudironic.md
- removed 自定义Overcloud部署/README.md
- removed 自定义Overcloud部署/ssltls配置.md
- removed 自定义Overcloud部署/xiu-gai-teding-jie-dian-de-hiera.md
- removed 自定义Overcloud部署/主机属性配置.md
- removed 自定义Overcloud部署/定义主机.md
- removed 自定义Overcloud部署/定制化部署.md
- removed 自定义Overcloud部署/自定义Overcloud部署.md
- removed 自定义Overcloud部署/自定义role.md
- removed 自定义Overcloud部署/自定义网络.md

Auto commit by GitBook Editor

--- a/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
+++ b/第一章-TripleO部署实践/虚拟环境部署/准备虚拟环境.md
@@ -21,15 +21,23 @@ a
 
 4. 安装instack-undercloud
 ```
-a
+sudo yum install instack-undercloud -y 
 ```
 
 5. 配置instack环境变量
 ```
-a
+export NODE_DIST=centos7
+export NODE_COUNT=9
+export NODE_CPU=2
+export NODE_MEM=6144
+export NODE_DISK=40
+export UNDERCLOUD_NODE_CPU=4
+export UNDERCLOUD_NODE_MEM=16384
+export UNDERCLOUD_NODE_DISK=50
+export DIB_LOCAL_IMAGE=CentOS-7-x86_64-GenericCloud-1611.qcow2
 ```
 
 6. 部署虚拟环境
 ```
-a
+instack-virt-setup
 ```
