--- a/镜像制作.md
+++ b/镜像制作.md
@@ -6,23 +6,14 @@
 
 ## 准备yum 源
 
-在你的镜像制作机上安装openstack 、ceph 源
+准备 centos-base,updates,epel,openstack 这四个源
+确保镜像中有centos-base,updates,epel,openstack 这四个源
 
+## 准备镜像
+1. 这里使用CentOS7-1611的镜像。
+2. 删除镜像中所有的yum repo 文件，放入我们准备好的yum repo
 ```
-# 使用CentOS 社区的openstack源
-sudo yum install -y centos-release-openstack-newton
+virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --run-command 'rm -f /etc/yum.repos.d/*'
+
+virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --upload uos-4.0-production.repo:/etc/yum.repos.d/
 ```
-
-安装完后源的地址应该是这样：
-
-```
-http://mirror.centos.org/centos/7/cloud/$basearch/openstack-newton/
-```
-
-ceph：
-```
-https://download.ceph.com/rpm-jewel/el7/x86_64/
-```
-
-
-
