--- a/镜像制作.md
+++ b/镜像制作.md
@@ -13,7 +13,9 @@
 1. 这里使用CentOS7-1611的镜像。
 2. 删除镜像中所有的yum repo 文件，放入我们准备好的yum repo
 ```
-virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --run-command 'rm -f /etc/yum.repos.d/*'
-
-virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --upload uos-4.0-production.repo:/etc/yum.repos.d/
+#删除yum repo
+$virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --run-command 'rm -f /etc/yum.repos.d/*'
+#上传自定义的yum repo
+$virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --upload uos-4.0-production.repo:/etc/yum.repos.d/
 ```
+3. 
