--- a/镜像制作.md
+++ b/镜像制作.md
@@ -18,4 +18,17 @@ $virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --run-command 'rm -f 
 #上传自定义的yum repo
 $virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --upload uos-4.0-production.repo:/etc/yum.repos.d/
 ```
-3. 
+## 制作镜像
+镜像制作需要切换到root用户。并且Base镜像不能放在/root 目录中,也不要在/root 目录中进行镜像制作，避免权限问题。这里使用`/tmp`目录来制作镜像
+
+```
+#切换到root 用户
+$sudo su 
+
+#将base镜像拷贝到镜像制作目录
+$mkdir /tmp/overcloud_image
+$cp <base image path>.qcow2 /tmp/overcloud_image
+$cd /tmp/overcloud_image
+
+#通过设置DIB的环境变量来设置base image的路径
+```
