--- a/镜像制作.md
+++ b/镜像制作.md
@@ -31,4 +31,9 @@ $cp <base image path>.qcow2 /tmp/overcloud_image
 $cd /tmp/overcloud_image
 
 #通过设置DIB的环境变量来设置base image的路径
+export DIB_LOCAL_IMAGE=/tmp/overcloud_image/CentOS-7-x86_64-GenericCloud-1611.qcow2
+
+#制作Overcloud image
+openstack overcloud image build --all
+
 ```
