--- a/镜像制作.md
+++ b/镜像制作.md
@@ -4,12 +4,12 @@
 
 镜像可以是RHEL或者是CentOS，这里使用CentOS作为示例。
 
-## 准备yum 源
+## 1. 准备yum 源
 
 准备 centos-base,updates,epel,openstack 这四个源
 确保镜像中有centos-base,updates,epel,openstack 这四个源
 
-## 准备镜像
+## 2. 准备镜像
 1. 这里使用CentOS7-1611的镜像。
 2. 删除镜像中所有的yum repo 文件，放入我们准备好的yum repo
 ```
@@ -19,7 +19,7 @@ $virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --run-command 'rm -f 
 $virt-customize -a CentOS-7-x86_64-GenericCloud-1611.qcow2 --upload uos-4.0-production.repo:/etc/yum.repos.d/
 ```
 
-## 制作镜像
+## 3. 制作镜像
 镜像制作需要切换到root用户。并且Base镜像不能放在/root 目录中,也不要在/root 目录中进行镜像制作，避免权限问题。这里使用`/tmp`目录来制作镜像
 
 ```
